minor 404/500 error pages tweaks

--- a/test/www/webserv/error_pages/50x.html
+++ b/test/www/webserv/error_pages/50x.html
@@ -4,7 +4,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>404 Not Found</title>
+	<title>500 Internal Server Error</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	
 	<style type="text/css" media="screen">
@@ -45,11 +45,11 @@
 
 <body>
 	<div id="container">
-		<h1>404</h1>
-		<h2>Page Not Found D:</h2>
+		<h1>500</h1>
+		<h2>Internal Server Error x.x</h2>
 		<br/>
-		<p>The requested URL was not found on this server.</p>
-		<a href="http://mywebsite.com/">Back to normality</a>
+		<p>The server experienced an issue.</p>
+		</p>This is not your fault, don't worry.</p>
 	</div>
 </body>
 
