added counter cgi

--- a/test/www/webserv/index.html
+++ b/test/www/webserv/index.html
@@ -1,13 +1,27 @@
 <!DOCTYPE html>
 
 <html>
+
 <head>
 	<title>WebServ</title>
+	<link rel="stylesheet" href="css/index.css">
 </head>
-<body>
-	<h1>WebServ</h1>
 
-	<p>WebServ is a simple web server written in CPP. It is designed to serve static content and is not intended for production use.</p>
-	<p>WebServ is a project for the 42 school.</p>
+<body>
+	<div id="mainContainer">
+		<h1>WebServ Online !</h1>
+
+		<p>
+			WebServ is a simple web server written in CPP.
+			</br>
+			It is designed to serve static content and some basic dynamic
+			content using CGI (yes not the fast one) and is not intended for
+			production use.
+		</p>
+		<p>WebServ is a project for the 42 school.</p>
+
+		<a class="linkButton" href="/cgi-bin/">Click me !</a>
+	</div>
 </body>
+
 </html>
